--- a/BDMuestras/BDMuestras.csproj
+++ b/BDMuestras/BDMuestras.csproj
@@ -132,6 +132,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MuestrasHornosDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="NumeroParte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NumeroParte.Designer.cs">
+      <DependentUpon>NumeroParte.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\EntidadReporteMuestra.cs" />
     <Compile Include="Reportes\ReporteMuestras.cs">
       <SubType>Form</SubType>
@@ -200,6 +206,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MonitoreoContinuo.resx">
       <DependentUpon>MonitoreoContinuo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NumeroParte.resx">
+      <DependentUpon>NumeroParte.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
