--- a/BDMuestras/App.config
+++ b/BDMuestras/App.config
@@ -15,10 +15,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MuestrasHornosEntities" connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AALEPOTTER_PC\MSSQLSERVERR;initial catalog=MuestrasHornos;persist security info=True;user id=sa;password=floresB1310;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="MuestrasHornosEntities" connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+                data source=SERVIDORHORNO\SQLEXPRESS;initial catalog=MuestrasHornos;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="Hornos.Properties.Settings.MuestrasHornosConnectionString"
-      connectionString="Data Source=AALEPOTTER_PC\MSSQLSERVERR;Initial Catalog=MuestrasHornos;User ID=sa;Password=floresB1310"
+      connectionString="Data Source=SERVIDORHORNO\SQLEXPRESS;Initial Catalog=MuestrasHornos;User ID=sa;Password=1234"
       providerName="System.Data.SqlClient" />
     
         <!--
