--- a/BDMuestras/App.config
+++ b/BDMuestras/App.config
@@ -16,10 +16,10 @@
   </entityFramework>
   <connectionStrings>
     <add name="MuestrasHornosEntities" connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;
-                data source=SERVIDORHORNO\SQLEXPRESS;initial catalog=MuestrasHornos;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+                data source=LDUENAS\SQLEXPRESS;initial catalog=MuestrasHornos;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="Hornos.Properties.Settings.MuestrasHornosConnectionString"
-      connectionString="Data Source=SERVIDORHORNO\SQLEXPRESS;Initial Catalog=MuestrasHornos;User ID=sa;Password=1234"
+      connectionString="Data Source=LDUENAS\SQLEXPRESS;Initial Catalog=MuestrasHornos;User ID=sa;Password=1234"
       providerName="System.Data.SqlClient" />
     
         <!--
@@ -28,7 +28,7 @@
         DESKTOP-8IGEI3F\SQL2014 (Servidor I1806, tambien se usa con Horno H1764) 
         SERVIDORHORNO\SQLEXPRESS (Servidor Aluminio1436)
         LDUENAS\SQLEXPRESS (Servidor Manroquez)
-        AALEPOTTER_PC\MSSQLSERVERR (Servidor Ale)
+        AALEPOTTER_PC\SQLEXPRESS (Servidor Ale)
     -->  
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
