Nuevo Modelo BD

--- a/BDMuestras/App.config
+++ b/BDMuestras/App.config
@@ -15,13 +15,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MuestrasHornosEntities" connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;
-                data source=LDUENAS\SQLEXPRESS;initial catalog=MuestrasHornos;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="Hornos.Properties.Settings.MuestrasHornosConnectionString"
-      connectionString="Data Source=LDUENAS\SQLEXPRESS;Initial Catalog=MuestrasHornos;User ID=sa;Password=1234"
-      providerName="System.Data.SqlClient" />
-    
+        <add name="HornosHaltingEntities" 
+             connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AALEPOTTER_PC\SQLEXPRESS;initial catalog=HornosHalting;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
+             providerName="System.Data.EntityClient" />
         <!--
         Servidores
         
