--- a/BDMuestras/App.config
+++ b/BDMuestras/App.config
@@ -15,16 +15,13 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-        <add name="HornosHaltingEntities" 
-             connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AALEPOTTER_PC\SQLEXPRESS;initial catalog=HornosHalting;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
-             providerName="System.Data.EntityClient" />
-        <!--
-        Servidores
-        
-        DESKTOP-8IGEI3F\SQL2014 (Servidor I1806, tambien se usa con Horno H1764) 
-        SERVIDORHORNO\SQLEXPRESS (Servidor Aluminio1436)
-        LDUENAS\SQLEXPRESS (Servidor Manroquez)
-        AALEPOTTER_PC\SQLEXPRESS (Servidor Ale)
-    -->  
+    <add name="HornosHaltingEntities" connectionString="metadata=res://*/ModeloBaseDatos.csdl|res://*/ModeloBaseDatos.ssdl|res://*/ModeloBaseDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AALEPOTTER_PC\SQLEXPRESS;initial catalog=HornosHalting;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="Hornos.Properties.Settings.MuestrasHornosConnectionString"
+      connectionString="Data Source=AALEPOTTER_PC\MSSQLSERVERR;Initial Catalog=MuestrasHornos;User ID=sa;Password=floresB1310"
+      providerName="System.Data.SqlClient" />
+    <add name="Hornos.Properties.Settings.HornosHaltingConnectionString"
+      connectionString="Data Source=AALEPOTTER_PC\SQLEXPRESS;Initial Catalog=HornosHalting;Persist Security Info=True;User ID=sa"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
