--- a/BDMuestras/BDMuestras.csproj
+++ b/BDMuestras/BDMuestras.csproj
@@ -127,6 +127,16 @@
     <Compile Include="CapturadeDatos.Designer.cs">
       <DependentUpon>CapturadeDatos.cs</DependentUpon>
     </Compile>
+    <Compile Include="HornosHaltingDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HornosHaltingDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="HornosHaltingDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HornosHaltingDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="MuestrasHornosDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -240,6 +250,28 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="BDMuestras_TemporaryKey.pfx" />
+    <None Include="HornosHaltingDataSet.xsc">
+      <DependentUpon>HornosHaltingDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="HornosHaltingDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>HornosHaltingDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="HornosHaltingDataSet.xss">
+      <DependentUpon>HornosHaltingDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="HornosHaltingDataSet1.xsc">
+      <DependentUpon>HornosHaltingDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="HornosHaltingDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>HornosHaltingDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="HornosHaltingDataSet1.xss">
+      <DependentUpon>HornosHaltingDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="MuestrasHornosDataSet.xsc">
       <DependentUpon>MuestrasHornosDataSet.xsd</DependentUpon>
     </None>
@@ -311,6 +343,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="images.ico" />
+    <None Include="Resources\Editars1.png" />
     <None Include="Resources\help.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
